Resolução dos exercícios e correção da leitura